@@ -36,7 +36,7 @@ var extNonStats = Components.classes["@mozilla.org/extensions/manager;1"]
     //Leihoko lerro guztietan zero zenbakia idatzi (estatistikak garbitu)
     var tree = document.getElementById("zuhaitza");
     var colstats = tree.columns.getNamedColumn("stats-count");
-    for (f=0;f<=17;f++){
+    for (f=0;f<=18;f++){
       tree.view.setCellText(f,colstats,0);
     }  }
 }
