@@ -15,6 +15,7 @@
 <!ENTITY euskalbar.itzul.tooltip "ItzuL mailing list archive">
 <!ENTITY euskalbar.harluxet.tooltip "Harluxet encyclopedic dictionary">
 <!ENTITY euskalbar.mokoroa.tooltip "Mokoroa database">
+<!ENTITY euskalbar.intza.tooltip "Intza idioms project">
 <!ENTITY euskalbar.ztcorpusa.tooltip "Science and Technology Corpus">
 <!ENTITY euskalbar.eurovoc.tooltip "Eurovoc Thesaurus">
 <!ENTITY euskalbar.xuxenweb.tooltip "XUXENweb spell checker">
