@@ -4,6 +4,7 @@
 
 2.2 bertsioa
 ================
+- Intza proiektuko lokuzioak kontsultatzeko botoia gehitu zaio barrari.
 - Sinonimoen hiztegiak gehitu zaizkio barrari.
 - Barrako zenbait hiztegi erakutsi eta ezkutatzeko aukera sortu da. (#6)
 - Azalak sortu dira. (#14)
